examples/expected/parse_invalid_missing_semicolon.txt
error: unexpected token RBrace
  --> examples/invalid_parse_missing_semicolon.tp:3:1
   |
 3 | }
   | ^
